--- a/prometheus/configmap-prometheus.yml
+++ b/prometheus/configmap-prometheus.yml
@@ -14,11 +14,11 @@ data:
       - job_name: 'node-exporter'
         scheme: http
         kubernetes_sd_configs:
-          - role: service
+          - role: endpoints
             namespaces:
               names:
               - dem
         relabel_configs:
-        - source_labels: [__meta_kubernetes_service_name]
+        - source_labels: [__meta_kubernetes_endpoints_name]
           regex: 'node-exporter-service'
-          action: keep
+          action: keep     
