--- a/prometheus/rbac-prometheus.yml
+++ b/prometheus/rbac-prometheus.yml
@@ -13,6 +13,8 @@ rules:
     resources:
       - services
       - endpoints
+      - nodes
+      - pods
     verbs: ["get", "list", "watch"]
 --- 
 apiVersion: rbac.authorization.k8s.io/v1
